k8s/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: wspie
  labels:
    maintainer: maslick
    project: sandbox
    app: wspie
spec:
  ports:
    - port: 8080
      targetPort: http
  selector:
    maintainer: maslick
    project: sandbox
    app: wspie
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wspie
  labels:
    maintainer: maslick
    project: sandbox
    app: wspie
spec:
  replicas: 1
  selector:
    matchLabels:
      maintainer: maslick
      project: sandbox
      app: wspie
  template:
    metadata:
      name: wspie
      labels:
        maintainer: maslick
        project: sandbox
        app: wspie
    spec:
      containers:
        - image: maslick/wspie
          imagePullPolicy: Always
          name: wspie
          ports:
            - containerPort: 5000
              name: http
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 5
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 5
            periodSeconds: 30
